<resources>
    <string name="app_name">阳哥说</string>
    <string name="move_file">移动到</string>
    <string name="browser_file">我的手机</string>
    <string name="title_home">首页</string>
    <string name="title_recommend">推荐</string>
    <string name="title_profile">我的</string>
    <string name="title_about">关于</string>
    <string name="title_settings">设置</string>
    <string name="nav_share">分享</string>
    <string name="nav_copy">复制</string>
    <string name="nav_move">移动</string>
    <string name="nav_delete">删除</string>
    <string name="nav_more">更多</string>
    <string name="nav_rename">重命名</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="hide_file_title">显示隐藏文件</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>